fixing the overflow css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -8,6 +10,9 @@
 
 body{
     background-color: rgb(230, 230, 230);
+    font-family: "Noto Sans", sans-serif;
+    font-style: normal;
+    height: 85dvh;
 }
 
 
@@ -38,20 +43,50 @@ nav > ul > li > a {
 
     padding:1em 6em 1em 6em;
     display: grid;
+    gap: 50px;
     grid-template-columns: 1fr 1fr;
+    height: 100%;
 }
 
 
 /**** post container **/
-.post-container{
-    background-color: rgb(255, 255, 255);
-    padding: 50px;
-    gap: 50px;
+.blog-space-container {
+    padding: 50px 5px;
+    overflow-x: hidden;
+}
+
+.blog-space-container > h1 {
+    margin-bottom: 20px; 
+    font-size: 2em;      
+    font-weight: bold;   
+    color: #333;         
+    border-bottom: 2px solid #ddd;
+    padding-bottom: 10px; 
 }
 
 
-/**** Form **/
+.post-container{
+    padding: 10px 0;
+}
 
+.container{
+    background-color: #007BFF;
+    padding: 20px;
+    border-radius: 10px;
+    max-height: 100%;
+}
+
+.edit , .delete {
+    padding: 5px 15px;
+    border-radius: 5px;
+    border-style: none;
+}
+
+.edit , .delete:hover{
+    cursor: pointer;
+}
+
+/**** Form **/
 
 .form-container {
     height: 60dvh;
